--- a/Seminar_9/HomeWorks9/index.html
+++ b/Seminar_9/HomeWorks9/index.html
@@ -75,8 +75,13 @@
               <div>
                 <div class="bottom_content">
                   <div class="bottom_content_item1">
-                    <img src="img/fetured_items1.png" alt="fetured_items1" />
-                    <div>
+                    <div class="bottom_img_basket">
+                      <div class="button_basket_bottom">
+                        <button>В корзину</button>
+                      </div>
+                      <img src="img/fetured_items1.png" alt="fetured_items1" />
+                    </div>
+                    <div class="inner_content_bottom">
                       <h2>ELLERY X M'O CAPSULE</h2>
                       <p>
                         Known for her sculptural takes on traditional tailoring,
@@ -88,8 +93,13 @@
                   </div>
 
                   <div class="bottom_content_item2">
-                    <img src="img/fetured_items2.png" alt="fetured_items2" />
-                    <div>
+                    <div class="bottom_img_basket">
+                      <div class="button_basket_bottom">
+                        <button>В корзину</button>
+                      </div>
+                      <img src="img/fetured_items2.png" alt="fetured_items2" />
+                    </div>
+                    <div class="inner_content_bottom">
                       <h2>ELLERY X M'O CAPSULE</h2>
                       <p>
                         Known for her sculptural takes on traditional tailoring,
@@ -101,8 +111,13 @@
                   </div>
 
                   <div class="bottom_content_item3">
-                    <img src="img/fetured_items3.png" alt="fetured_items3" />
-                    <div>
+                    <div class="bottom_img_basket">
+                      <div class="button_basket_bottom">
+                        <button>В корзину</button>
+                      </div>
+                      <img src="img/fetured_items3.png" alt="fetured_items3" />
+                    </div>
+                    <div class="inner_content_bottom">
                       <h2>ELLERY X M'O CAPSULE</h2>
                       <p>
                         Known for her sculptural takes on traditional tailoring,
@@ -114,8 +129,13 @@
                   </div>
 
                   <div class="bottom_content_item4">
-                    <img src="img/fetured_items4.png" alt="fetured_items4" />
-                    <div>
+                    <div class="bottom_img_basket">
+                      <div class="button_basket_bottom">
+                        <button>В корзину</button>
+                      </div>
+                      <img src="img/fetured_items4.png" alt="fetured_items4" />
+                    </div>
+                    <div class="inner_content_bottom">
                       <h2>ELLERY X M'O CAPSULE</h2>
                       <p>
                         Known for her sculptural takes on traditional tailoring,
@@ -127,8 +147,13 @@
                   </div>
 
                   <div class="bottom_content_item5">
-                    <img src="img/fetured_items5.png" alt="fetured_items5" />
-                    <div>
+                    <div class="bottom_img_basket">
+                      <div class="button_basket_bottom">
+                        <button>В корзину</button>
+                      </div>
+                      <img src="img/fetured_items5.png" alt="fetured_items5" />
+                    </div>
+                    <div class="inner_content_bottom">
                       <h2>ELLERY X M'O CAPSULE</h2>
                       <p>
                         Known for her sculptural takes on traditional tailoring,
@@ -140,8 +165,13 @@
                   </div>
 
                   <div class="bottom_content_item6">
-                    <img src="img/fetured_items6.png" alt="fetured_items6" />
-                    <div>
+                    <div class="bottom_img_basket">
+                      <div class="button_basket_bottom">
+                        <button>В корзину</button>
+                      </div>
+                      <img src="img/fetured_items6.png" alt="fetured_items6" />
+                    </div>
+                    <div class="inner_content_bottom">
                       <h2>ELLERY X M'O CAPSULE</h2>
                       <p>
                         Known for her sculptural takes on traditional tailoring,
