--- a/Seminar_9/HomeWorks9/index.html
+++ b/Seminar_9/HomeWorks9/index.html
@@ -77,6 +77,7 @@
                   <div class="bottom_content_item1">
                     <div class="bottom_img_basket">
                       <div class="button_basket_bottom">
+                        <img src="img/basketcard.png" alt="basketcard">
                         <button>В корзину</button>
                       </div>
                       <img src="img/fetured_items1.png" alt="fetured_items1" />
@@ -95,6 +96,7 @@
                   <div class="bottom_content_item2">
                     <div class="bottom_img_basket">
                       <div class="button_basket_bottom">
+                        <img src="img/basketcard.png" alt="basketcard">
                         <button>В корзину</button>
                       </div>
                       <img src="img/fetured_items2.png" alt="fetured_items2" />
@@ -113,6 +115,7 @@
                   <div class="bottom_content_item3">
                     <div class="bottom_img_basket">
                       <div class="button_basket_bottom">
+                        <img src="img/basketcard.png" alt="basketcard">
                         <button>В корзину</button>
                       </div>
                       <img src="img/fetured_items3.png" alt="fetured_items3" />
@@ -131,6 +134,7 @@
                   <div class="bottom_content_item4">
                     <div class="bottom_img_basket">
                       <div class="button_basket_bottom">
+                        <img src="img/basketcard.png" alt="basketcard">
                         <button>В корзину</button>
                       </div>
                       <img src="img/fetured_items4.png" alt="fetured_items4" />
@@ -149,6 +153,7 @@
                   <div class="bottom_content_item5">
                     <div class="bottom_img_basket">
                       <div class="button_basket_bottom">
+                        <img src="img/basketcard.png" alt="basketcard">
                         <button>В корзину</button>
                       </div>
                       <img src="img/fetured_items5.png" alt="fetured_items5" />
@@ -167,6 +172,7 @@
                   <div class="bottom_content_item6">
                     <div class="bottom_img_basket">
                       <div class="button_basket_bottom">
+                        <img src="img/basketcard.png" alt="basketcard">
                         <button>В корзину</button>
                       </div>
                       <img src="img/fetured_items6.png" alt="fetured_items6" />
