--- a/Seminar_9/HomeWorks9/index.html
+++ b/Seminar_9/HomeWorks9/index.html
@@ -10,32 +10,41 @@
   <body>
     <header>
       <div class="container">
-        <nav class="nav">
-          <div class="nav_item1">
-            <img class="logo_img" src="img/Logo.png" alt="Logo" />
-            <img src="img/find.png" alt="find" />
+        <div class="container_in">
+          <div class="drop_menu">MENU</div>
+          <div class="nav_container">
+            <nav class="nav">
+              <div class="nav_item1">
+                <img class="logo_img" src="img/Logo.png" alt="Logo" />
+                <img src="img/find.png" alt="find" />
+              </div>
+              <div class="nav_item2">
+                <img src="img/nav1.png" alt="nav1" />
+                <img class="nav_tem2_block" src="img/nav2.png" alt="nav2" />
+                <img class="nav_tem2_block" src="img/nav3.png" alt="nav3" />
+                <div class="nav_basket"><p>5</p></div>
+              </div>
+            </nav>
           </div>
-          <div class="nav_item2">
-            <img src="img/nav1.png" alt="nav1" />
-            <img class="nav_tem2_block" src="img/nav2.png" alt="nav2" />
-            <img class="nav_tem2_block" src="img/nav3.png" alt="nav3" />
-            <div class="nav_basket"><p>5</p></div>
-          </div>
-        </nav>
+        </div>
       </div>
       <div class="container">
-        <div class="header_main">
-          <div>
-            <img src="img/man-main.png" alt="man-main" />
-          </div>
-          <div>
-            <div class="brand_text">
-              <div class="border">
-                <h1>THE BRAND</h1>
-                <h2>OF LUXERIOUS <span>FASHION</span></h2>
+        <div class="main_bg">
+        <div class="container_main">
+          <div class="header_main">
+            <div>
+              <img src="img/man-main.png" alt="man-main" />
+            </div>
+            <div>
+              <div class="brand_text">
+                <div class="border">
+                  <h1>THE BRAND</h1>
+                  <h2>OF LUXERIOUS <span>FASHION</span></h2>
+                </div>
               </div>
             </div>
           </div>
+        </div>
         </div>
       </div>
     </header>
@@ -77,7 +86,7 @@
                   <div class="bottom_content_item1">
                     <div class="bottom_img_basket">
                       <div class="button_basket_bottom">
-                        <img src="img/basketcard.png" alt="basketcard">
+                        <img src="img/basketcard.png" alt="basketcard" />
                         <button>В корзину</button>
                       </div>
                       <img src="img/fetured_items1.png" alt="fetured_items1" />
@@ -96,7 +105,7 @@
                   <div class="bottom_content_item2">
                     <div class="bottom_img_basket">
                       <div class="button_basket_bottom">
-                        <img src="img/basketcard.png" alt="basketcard">
+                        <img src="img/basketcard.png" alt="basketcard" />
                         <button>В корзину</button>
                       </div>
                       <img src="img/fetured_items2.png" alt="fetured_items2" />
@@ -115,7 +124,7 @@
                   <div class="bottom_content_item3">
                     <div class="bottom_img_basket">
                       <div class="button_basket_bottom">
-                        <img src="img/basketcard.png" alt="basketcard">
+                        <img src="img/basketcard.png" alt="basketcard" />
                         <button>В корзину</button>
                       </div>
                       <img src="img/fetured_items3.png" alt="fetured_items3" />
@@ -134,7 +143,7 @@
                   <div class="bottom_content_item4">
                     <div class="bottom_img_basket">
                       <div class="button_basket_bottom">
-                        <img src="img/basketcard.png" alt="basketcard">
+                        <img src="img/basketcard.png" alt="basketcard" />
                         <button>В корзину</button>
                       </div>
                       <img src="img/fetured_items4.png" alt="fetured_items4" />
@@ -153,7 +162,7 @@
                   <div class="bottom_content_item5">
                     <div class="bottom_img_basket">
                       <div class="button_basket_bottom">
-                        <img src="img/basketcard.png" alt="basketcard">
+                        <img src="img/basketcard.png" alt="basketcard" />
                         <button>В корзину</button>
                       </div>
                       <img src="img/fetured_items5.png" alt="fetured_items5" />
@@ -172,7 +181,7 @@
                   <div class="bottom_content_item6">
                     <div class="bottom_img_basket">
                       <div class="button_basket_bottom">
-                        <img src="img/basketcard.png" alt="basketcard">
+                        <img src="img/basketcard.png" alt="basketcard" />
                         <button>В корзину</button>
                       </div>
                       <img src="img/fetured_items6.png" alt="fetured_items6" />
