--- a/Seminar_9/HomeWorks9/index.html
+++ b/Seminar_9/HomeWorks9/index.html
@@ -11,7 +11,35 @@
     <header>
       <div class="container">
         <div class="container_in">
-          <div class="drop_menu">MENU</div>
+          <div class="drop_menu menu_block">
+            <p>MENU</p>
+
+            <ul>
+              <li>MAN</li>
+              <li>Accessories</li>
+              <li>Bags</li>
+              <li>Denim</li>
+              <li>T-Shirts</li>
+            </ul>
+
+            <ul>
+              <li>WOMAN</li>
+              <li>Accessories</li>
+              <li>Jackets & Coats</li>
+              <li>Polos</li>
+              <li>T-Shirts</li>
+            </ul>
+
+            <ul>
+              <li>KIDS</li>
+              <li>Accessories</li>
+              <li>Jackets & Coats</li>
+              <li>Polos</li>
+              <li>T-Shirts</li>
+              <li>Shirts</li>
+              <li>Bags</li>
+            </ul>
+          </div>
           <div class="nav_container">
             <nav class="nav">
               <div class="nav_item1">
@@ -30,21 +58,21 @@
       </div>
       <div class="container">
         <div class="main_bg">
-        <div class="container_main">
-          <div class="header_main">
-            <div>
-              <img src="img/man-main.png" alt="man-main" />
-            </div>
-            <div>
-              <div class="brand_text">
-                <div class="border">
-                  <h1>THE BRAND</h1>
-                  <h2>OF LUXERIOUS <span>FASHION</span></h2>
+          <div class="container_main">
+            <div class="header_main">
+              <div>
+                <img src="img/man-main.png" alt="man-main" />
+              </div>
+              <div>
+                <div class="brand_text">
+                  <div class="border">
+                    <h1>THE BRAND</h1>
+                    <h2>OF LUXERIOUS <span>FASHION</span></h2>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
         </div>
       </div>
     </header>
