--- a/Seminar_9/HomeWorks9/index.html
+++ b/Seminar_9/HomeWorks9/index.html
@@ -25,7 +25,7 @@
             <ul>
               <li>WOMAN</li>
               <li>Accessories</li>
-              <li>Jackets & Coats</li>
+              <li>Jackets \& Coats</li>
               <li>Polos</li>
               <li>T-Shirts</li>
             </ul>
@@ -33,7 +33,7 @@
             <ul>
               <li>KIDS</li>
               <li>Accessories</li>
-              <li>Jackets & Coats</li>
+              <li>Jackets \& Coats</li>
               <li>Polos</li>
               <li>T-Shirts</li>
               <li>Shirts</li>
