--- a/Seminar_9/HomeWorks9/index.html
+++ b/Seminar_9/HomeWorks9/index.html
@@ -47,10 +47,12 @@
                 <img src="img/find.png" alt="find" />
               </div>
               <div class="nav_item2">
-                <img src="img/nav1.png" alt="nav1" />
+                <img class="nav_drop_menu" src="img/nav1.png" alt="nav1" />
                 <img class="nav_tem2_block" src="img/nav2.png" alt="nav2" />
                 <img class="nav_tem2_block" src="img/nav3.png" alt="nav3" />
-                <div class="nav_basket"><p>5</p></div>
+                <div class="nav_basket">
+                  <p>5</p>
+                </div>
               </div>
             </nav>
           </div>
@@ -326,5 +328,6 @@
         </div>
       </div>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
